<?xml version="1.0"?>
<package format="2">
  <name>kobuki</name>
  <version>0.7.4</version>
  <description>
    Software for Kobuki, Yujin Robot's mobile research base.
  </description>
  <author>Daniel Stonier</author>
  <author>Younghun Ju</author>
  <author>Jorge Santos Simon</author>
  <author>Marcus Liebhardt</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kobuki_auto_docking</exec_depend>
  <exec_depend>kobuki_bumper2pc</exec_depend>
  <exec_depend>kobuki_controller_tutorial</exec_depend>
  <exec_depend>kobuki_description</exec_depend> 
  <exec_depend>kobuki_keyop</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>kobuki_random_walker</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>
  <exec_depend>kobuki_testsuite</exec_depend>
  <exec_depend>kobuki_rapps</exec_depend>
  <exec_depend>kobuki_capabilities</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <metapackage/>
  </export>
</package>
