<?xml version="1.0"?>
<package format="2">
  <name>kobuki_auto_docking</name>
  <version>0.7.4</version>
  <description>
	    Automatic docking for Kobuki:
	    Users owning a docking station for Kobuki can use this tool to let Kobuki find its nest autonomously.
  </description>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <maintainer email="yhju@yujinrobot.com">Younghun Ju</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_auto_docking</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>message_filters</build_depend>
  <!--<build_depend>actionlib</build_depend>-->
  <build_depend>kdl_conversions</build_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>kobuki_dock_drive</build_depend>

  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_geometry</build_depend>
  <build_depend>ecl_linear_algebra</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <!--<exec_depend>actionlib</exec_depend>-->
  <exec_depend>kdl_conversions</exec_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>kobuki_dock_drive</exec_depend>
  <exec_depend>yocs_cmd_vel_mux</exec_depend>

  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>ecl_geometry</exec_depend>
  <exec_depend>ecl_linear_algebra</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
  </export>
</package>
