<?xml version="1.0"?>
<package format="2">
  <name>kobuki_bumper2pc</name>
  <version>0.7.4</version>
  <description>
    Bumper/cliff to pointcloud nodelet:
    Publish bumpers and cliff sensors events as points in a pointcloud, so navistack can use them
    for poor-man navigation. Implemented as a nodelet intended to run together with kobuki_node.
  </description>
  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author>
  <maintainer email="jorge@yujinrobot.com">Jorge Santos Simon</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_bumper2pc</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
  </export>
</package>
