<?xml version="1.0"?>
<package format="2">
  <name>kobuki_capabilities</name>
  <version>0.7.4</version>
  <description>Kobuki's capabilities</description>
  
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <author>Marcus Liebhardt</author>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/kobuki_capabilities</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>rocon_app_manager</exec_depend>
  <exec_depend>rocon_apps</exec_depend>
  <exec_depend>std_capabilities</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <capability_interface>interfaces/KobukiBringup.yaml</capability_interface>
    <capability_interface>interfaces/KobukiLED.yaml</capability_interface>
    <semantic_capability_interface>interfaces/KobukiLED1.yaml</semantic_capability_interface>
    <semantic_capability_interface>interfaces/KobukiLED2.yaml</semantic_capability_interface>
    <capability_interface>interfaces/KobukiBumper.yaml</capability_interface>
    <capability_interface>interfaces/KobukiCliffDetection.yaml</capability_interface>
    <capability_interface>interfaces/KobukiWheelDropDetection.yaml</capability_interface>
    <capability_provider>providers/kobuki_bringup.yaml</capability_provider>
    <capability_provider>providers/kobuki_led.yaml</capability_provider>
    <capability_provider>providers/kobuki_led1.yaml</capability_provider>
    <capability_provider>providers/kobuki_led2.yaml</capability_provider>
    <capability_provider>providers/kobuki_bumper.yaml</capability_provider>
    <capability_provider>providers/kobuki_cliff_detection.yaml</capability_provider>
    <capability_provider>providers/kobuki_wheel_drop_detection.yaml</capability_provider>
    <capability_provider>providers/kobuki_differential_mobile_base.yaml</capability_provider>
  </export>
</package>
