<?xml version="1.0"?>
<package format="2">
  <name>kobuki_controller_tutorial</name>
  <version>0.7.4</version>
  <description>
    Code for the Kobuki controller tutorial.
  </description>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_controller_tutorial</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>yocs_controllers</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>yocs_controllers</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
