<?xml version="1.0"?>
<package format="2">
  <name>kobuki_keyop</name>
  <version>0.7.4</version>
  <description>
    Keyboard teleoperation for Kobuki: relays commands from a keyboard to Kobuki.
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_keyop</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Ros -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rclcpp</build_depend>

  <!-- Ecl -->
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time</build_depend>

  <!-- Kobuki -->
  <build_depend>kobuki_msgs</build_depend>


  <!-- Ros -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>

  <!-- Ecl -->
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  <exec_depend>ecl_time</exec_depend>

  <!-- Kobuki -->
  <exec_depend>kobuki_msgs</exec_depend>
  
  <!-- Yujin ocs -->
  <exec_depend>yocs_cmd_vel_mux</exec_depend>
  <exec_depend>yocs_velocity_smoother</exec_depend>
</package>
