<?xml version="1.0"?>
<package format="2">
  <name>kobuki_node</name>
  <version>0.7.4</version>
  <description>
      ROS nodelet for Kobuki: ROS wrapper for the Kobuki driver.
  </description>
  <author>Daniel Stonier</author>
  <author>Younghun Ju</author>
  <author>Jorge Santos Simon</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_node</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>

  <!-- Kobuki -->
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>kobuki_driver</build_depend>
  <build_depend>kobuki_ftdi</build_depend>
  <build_depend>kobuki_keyop</build_depend>
  <build_depend>kobuki_safety_controller</build_depend>

  <!-- ECL -->
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_sigslots</build_depend>
  <build_depend>ecl_streams</build_depend>
  <build_depend>ecl_threads</build_depend>

  <!-- For Tests -->
  <build_depend>rclpy</build_depend>


  <!-- ROS -->
  <exec_depend>capabilities</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>diagnostic_aggregator</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>

  <!-- Kobuki -->
  <exec_depend>kobuki_rapps</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>kobuki_driver</exec_depend>
  <exec_depend>kobuki_ftdi</exec_depend>
  <exec_depend>kobuki_keyop</exec_depend>
  <exec_depend>kobuki_safety_controller</exec_depend>

  <!-- ECL -->
  <exec_depend>ecl_exceptions</exec_depend>
  <exec_depend>ecl_sigslots</exec_depend>
  <exec_depend>ecl_streams</exec_depend>
  <exec_depend>ecl_threads</exec_depend>

  <!-- For Tests -->
  <exec_depend>rclpy</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml" />
  </export>
</package>
