<?xml version="1.0"?>
<package format="2">
  <name>kobuki_rapps</name>
  <version>0.7.4</version>
  <description>Robot apps for Kobuki</description>
  
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <author>Marcus Liebhardt</author>
  
  <license>BSD</license>
  
  <url type="website">http://ros.org/wiki/kobuki_rapps</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>kobuki_auto_docking</exec_depend>
  <exec_depend>kobuki_random_walker</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc config="rosdoc.yaml"/>
    <rocon_app>rapps/auto_docking/auto_docking.rapp</rocon_app>
    <rocon_app>rapps/random_walker/random_walker.rapp</rocon_app>
  </export>
</package>
