<?xml version="1.0"?>
<package format="2">
  <name>kobuki_safety_controller</name>
  <version>0.7.4</version>
  <description>
    A controller ensuring the safe operation of Kobuki.

    The SafetyController keeps track of bumper, cliff and wheel drop events. In case of the first two,
    Kobuki is commanded to move back. In the latter case, Kobuki is stopped.
    
    This controller can be enabled/disabled.
    The safety states (bumper pressed etc.) can be reset. WARNING: Dangerous!
  </description>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_safety_controller</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>yocs_controllers</build_depend>
  <build_depend>ecl_threads</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>yocs_controllers</exec_depend>
  <exec_depend>ecl_threads</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <nodelet plugin="${prefix}/plugins/nodelet_plugins.xml"/>
  </export>
</package>
