<?xml version="1.0"?>
<package format="2">
  <name>kobuki_testsuite</name>
  <version>0.7.4</version>
  <description>
    Kobuki test suite: this package provides tools to thoroughly test Kobuki's hardware.
  </description>
  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author>
  <maintainer email="jorge@yujinrobot.com">Jorge Santos Simon</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki</url>
  <url type="website">http://ros.org/wiki/kobuki_testsuite</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>python_orocos_kdl</build_depend>
  <build_depend>kobuki_node</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kobuki_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>python_orocos_kdl</exec_depend>
  <exec_depend>kobuki_node</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
